force-app/main/default/objects/Pricebook_Request__c/Pricebook_Request__c.object-meta.xml
<CustomObject>
    <description>A request to create a custom pricebook for a specific Account and Quote. Goes through an approval workflow. On approval, a real Pricebook2 is created and linked back here.</description>
    <label>Pricebook Request</label>
    <nameField>
        <displayFormat>PB-{00000}</displayFormat>
        <label>Pricebook Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricebook Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>