force-app/main/default/objects/Pricebook_Request__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <label>Approval Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>