force-app/main/default/objects/Pricebook_Request__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pricebook Requests</relationshipLabel>
    <relationshipName>Pricebook_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>