force-app/main/default/objects/Pricebook_Request__c/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <description>Auto-populated at submission. Lists each product name, code, and custom price for the approver to review on the approval page.</description>
    <label>Product Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>