force-app/main/default/objects/Pricebook_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Pricebook Requests</relationshipLabel>
    <relationshipName>Pricebook_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>