force-app/main/default/objects/Pricebook_Request__c/fields/Requested_Approver__c.field-meta.xml
<CustomField>
    <fullName>Requested_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user selected as approver at submission time. Used by the Pricebook Request Approval process (relatedUserField step).</description>
    <label>Requested Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pricebook Requests</relationshipLabel>
    <relationshipName>Pricebook_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>