force-app/main/default/objects/Pricebook_Request__c/fields/Target_Site__c.field-meta.xml
<CustomField>
    <fullName>Target_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Pricebook Requests</relationshipLabel>
    <relationshipName>Pricebook_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>